--- a/src/components/common/MapboxMap/mapPopup/mappopup.module.scss
+++ b/src/components/common/MapboxMap/mapPopup/mappopup.module.scss
@@ -4,4 +4,5 @@
     border-radius: $border-radius;
     box-shadow: 0 4px 2px rgba(0, 0, 0, 0.25);
     -webkit-box-shadow: 0 4px 2px rgba(0, 0, 0, 0.25);
+    z-index: 2;
 }
